# cpp-exercises

./: .clang-format  .gitignore  .pre-commit-config.yaml  LINTING.md  README.md  cpp_tutoring_plan.md  pixi.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
week2/: CMakeLists.txt  README.md  TESTING.md  claude.md  pixi.toml  test_command_joint_state.cpp  test_normalize_whitespace.cpp  test_serial_protocol.cpp  test_split.cpp  week2_exercises.md  week2_solutions.md
week3/: CMakeLists.txt  README.md  TESTING.md  claude.md  pixi.toml  test_rotation_averaging.cpp  test_sensor_array.cpp  test_transform3d.cpp  week3_solutions.md
